--- a/css/styles.css
+++ b/css/styles.css
@@ -586,3 +586,15 @@ form {
     
     
     /* ---------------  --------------- */
+
+    /* --------------- modal --------------- */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(46, 47, 66, 0.4);;
+}
+
+    /* ---------------  --------------- */
