--- a/css/styles.css
+++ b/css/styles.css
@@ -154,13 +154,13 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .nav-link:hover,
+.nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
 .contacts-link:focus,
 .nav-link.current {
   color: #404bbf;
-} */
+}
 
 /* ---------------  --------------- */
 
@@ -589,13 +589,27 @@ form {
     /* ---------------  --------------- */
 
     /* --------------- modal --------------- */
+
+
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:rgba(46, 47, 66, 0.4);;
+  background-color:rgba(46, 47, 66, 0.4);
 }
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 458px;
+  min-height: 584px;
+  box-shadow: ;
+background-color: #fcfcfc;
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);;
+border-radius: 4px;
+}
+
 
     /* ---------------  --------------- */
