--- a/css/styles.css
+++ b/css/styles.css
@@ -678,11 +678,11 @@ form {
   width: 100%;
   height: 40px;
   padding: 0 16px 0 38px;
-  border: 1px solid var(--iris);
+  border: 1px solid #2e2f42;
   border-radius: 4px;
   background-color: transparent;
   outline: none;
-  /* transition: border-color cubic-bezier(); */
+  transition: border-color 250ms var(--iris);
 }
 
 .modal-form-icon {
@@ -711,7 +711,7 @@ form {
   background-color: transparent;
   resize: none;
   outline: none;
-  transition: border-color 250ms var(--timing-function);
+  transition: border-color 250ms var(--iris);
 }
 
 .modal-form-check-descr {
