--- a/css/styles.css
+++ b/css/styles.css
@@ -551,8 +551,9 @@ form {
 .subscribe-title {
   margin-bottom: 16px;
   font-weight: 500;
+  font-size: 16px;
   letter-spacing: 0.02em;
-  color: var(--cloud);
+  color: #ffffff;
 }
 
 .subscribe-wrapper {
@@ -600,11 +601,11 @@ form {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .backdrop.is-open {
+.backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-} */
+}
 
 .modal {
   position: absolute;
