--- a/css/styles.css
+++ b/css/styles.css
@@ -581,7 +581,8 @@ form {
   outline: none;
   transition: border-color 250ms var(--timing-function);
 }
-/* placeholder-shown:border-color: blue; */
+
+/* .placeholder-shown:border-color: blue; */
 
 /* ---------------  --------------- */
 
@@ -594,18 +595,18 @@ form {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* .backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+} */
 
 .modal {
   position: absolute;
@@ -624,9 +625,9 @@ form {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop:not(.is-open) .modal {
+/* .backdrop:not(.is-open) .modal {
   transform: translate(-50%, -100%);
-}
+} */
 
 /* scale(1.5); */
 
@@ -654,6 +655,17 @@ form {
   letter-spacing: 0.02em;
   text-align: center;
   color: var(--navy-blue);
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  padding: 0 16px 0 38px;
+  border: 1px solid #2e2f42;
+  border-radius: 4px;
+  background-color: transparent;
+  outline: none;
+  transition: border-color 250ms var(--iris);
 }
 
 .modal-form-field {
@@ -720,4 +732,4 @@ form {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--light-slate);
-}
+} */
