--- a/css/styles.css
+++ b/css/styles.css
@@ -598,9 +598,8 @@ form {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
 /* .backdrop.is-open {
   opacity: 1;
@@ -640,12 +639,24 @@ form {
   align-items: center;
   width: 24px;
   height: 24px;
+  cursor: pointer;
   border-radius: 50%;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: #404bbf;
+  border: none; 
+}
+
+.modal-close-icon{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
 
 .modal-titel {
   font-weight: 500;
