--- a/css/styles.css
+++ b/css/styles.css
@@ -538,14 +538,9 @@ img {
   background-color: #31d0aa;
 }
 
-form {
-  display: block;
-  margin-top: 0em;
-  unicode-bidi: isolate;
-}
-
 .subscribe-form {
-  margin-left: auto;
+  gap: 24px;
+  display: flex;
 }
 
 .subscribe-title {
@@ -557,14 +552,10 @@ form {
 }
 
 .subscribe-wrapper {
-  display: flex;
   align-items: center;
-  gap: 24px;
+  /* gap: 24px; */
+  margin-left: auto;
 }
-
-/* .subscribe-input {
-  color: var(--white);
-} */
 
 .subscribe-input {
   width: 264px;
@@ -582,7 +573,9 @@ form {
   transition: border-color 250ms var(--timing-function);
 }
 
-/* .placeholder-shown:border-color: blue; */
+.subscribe-input:focus {
+  border: 1px solid var(--iris);
+}
 
 /* ---------------  --------------- */
 
@@ -595,11 +588,12 @@ form {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  opacity: 1;
-  visibility: visible;
+  opacity: 0;
+  visibility: hidden;
   pointer-events: auto;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 /* .backdrop.is-open {
   opacity: 1;
@@ -644,19 +638,19 @@ form {
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
 .modal-close:focus {
   background-color: #404bbf;
-  border: none; 
+  border: none;
 }
 
-.modal-close-icon{
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .modal-titel {
   font-weight: 500;
@@ -738,9 +732,14 @@ form {
   transition: border-color 250ms var(--iris);
 }
 
+/* .modal-form-check-icon {
+  opacity: 0;
+  
+} */
+
 .modal-form-check-descr {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--light-slate);
-} */
+}
