--- a/css/styles.css
+++ b/css/styles.css
@@ -553,7 +553,6 @@ img {
 
 .subscribe-wrapper {
   align-items: center;
-  /* gap: 24px; */
   margin-left: auto;
 }
 
@@ -561,16 +560,18 @@ img {
   width: 264px;
   height: 40px;
   padding-left: 16px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: border: 1px solid #ffffff; 
   border-radius: 4px;
-  background-color: transparent;
-  color: var(--white);
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: transparent;
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);  */
+  color: #ffffff;
+  placeholder: color #ffffff;
+  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   outline: none;
-  transition: border-color 250ms var(--timing-function);
+  transition: border-color 250ms var(--timing-function); */
 }
 
 .subscribe-input:focus {
