--- a/css/styles.css
+++ b/css/styles.css
@@ -566,7 +566,7 @@ img {
   line-height: 2;
   letter-spacing: 0.04em;
   background-color: transparent;
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);  */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
   color: #ffffff;
   placeholder: color #ffffff;
   /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
