--- a/css/styles.css
+++ b/css/styles.css
@@ -220,10 +220,14 @@ img {
 }
 
 .subscribe-btn {
-  display: inline-flex;
+  display: flex; 
+  /* display: inline-flex; */
+  justify-content: center; 
   align-items: center;
   gap: 16px;
   padding: 8px 24px;
+  min-width: 165px;
+  font-weight: 500
 }
 
 .button-main:hover,
@@ -231,6 +235,9 @@ img {
   background: #404bbf;
 }
 
+.btn-subscribe{
+  margin-left: 16px;
+}
 /* ---------------  --------------- */
 
 /* --------------- FEATURES --------------- */
@@ -569,9 +576,9 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
   color: #ffffff;
   placeholder: color #ffffff;
-  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   outline: none;
-  transition: border-color 250ms var(--timing-function); */
+  transition: border-color 250ms var(--timing-function);
 }
 
 .subscribe-input:focus {
