add label class subscribe label

--- a/css/styles.css
+++ b/css/styles.css
@@ -585,6 +585,8 @@ img {
   border: 1px solid var(--iris);
 }
 
+.subscribe-label{}
+
 /* ---------------  --------------- */
 
 /* --------------- modal --------------- */
