--- a/css/styles.css
+++ b/css/styles.css
@@ -599,8 +599,8 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  opacity: 0;
-  visibility: hidden;
+  opacity: 1;
+  visibility: visible;
   pointer-events: auto;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -659,7 +659,9 @@ img {
   border: none;
 }
 
-.modal-close-icon {
+.modal-close-icon:hover,
+.modal-close-icon:focus {
+  fill: #ffffff;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
