apd close icon class

--- a/css/styles.css
+++ b/css/styles.css
@@ -659,10 +659,13 @@ img {
   border: none;
 }
 
+..modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-close-icon:hover,
 .modal-close-icon:focus {
   fill: #ffffff;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-titel {
