--- a/css/styles.css
+++ b/css/styles.css
@@ -687,9 +687,14 @@ img {
   padding: 0 16px 0 38px;
   border: 1px solid #2e2f42;
   border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   background-color: transparent;
-  outline: none;
-  transition: border-color 250ms var(--iris);
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  border-color: #4d5ae5;
 }
 
 .modal-form-field {
@@ -699,6 +704,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   margin-bottom: 4px;
+  color: #8e8f99;
 }
 
 .modal-form-input-descr {
@@ -712,7 +718,7 @@ img {
 
 .modal-form-wrapper {
   position: relative;
-  display: block;
+  /* display: block; */
 }
 
 .modal-form-input {
