--- a/css/styles.css
+++ b/css/styles.css
@@ -720,23 +720,16 @@ img {
   /* display: block; */
 }
 
-.modal-form-input {
-  width: 100%;
-  height: 40px;
-  padding: 0 16px 0 38px;
-  border: 1px solid #2e2f42;
-  border-radius: 4px;
-  background-color: transparent;
-  outline: none;
-  transition: border-color 250ms var(--iris);
-}
-
 .modal-form-icon {
   position: absolute;
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  fill: var(--navy-blue);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-icon:focus {
+  fill: #4d5ae5;
 }
 
 .modal-form-field-textarea {
