--- a/css/styles.css
+++ b/css/styles.css
@@ -732,9 +732,9 @@ img {
   fill: #4d5ae5;
 }
 
-.modal-form-field-textarea {
+/* .modal-form-field-textarea {
   margin-bottom: 16px;
-}
+} */
 
 .modal-form-checkbox {
   margin-bottom: 24px;
@@ -744,23 +744,39 @@ img {
   display: block;
   width: 100%;
   height: 120px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   padding: 8px 16px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   background-color: transparent;
   resize: none;
-  outline: none;
-  transition: border-color 250ms var(--iris);
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .modal-form-check-icon {
+.modal-form-check-icon {
   opacity: 0;
-  
-} */
+}
 
 .modal-form-check-descr {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--light-slate);
+}
+
+.modal-form-check-copy {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
