--- a/css/styles.css
+++ b/css/styles.css
@@ -756,6 +756,10 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-form-message:focus {
+  border-color: #4d5ae5;
+}
+
 .modal-form-check-icon {
   opacity: 0;
 }
