--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,7 @@ img {
 .button-main {
   background: #4d5ae5;
   font-family: "Roboto", sans-serif;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
@@ -221,7 +221,6 @@ img {
 
 .subscribe-btn {
   display: flex;
-  /* display: inline-flex; */
   justify-content: center;
   align-items: center;
   gap: 16px;
@@ -237,6 +236,14 @@ img {
 
 .btn-subscribe {
   margin-left: 16px;
+}
+
+.btn-modal {
+  min-width: 169px;
+  height: 56px;
+  font-size: 16px;
+  font-weight: 500;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 /* ---------------  --------------- */
 
