--- a/css/styles.css
+++ b/css/styles.css
@@ -755,6 +755,7 @@ img {
   display: block;
   width: 100%;
   height: 120px;
+  font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
