--- a/css/styles.css
+++ b/css/styles.css
@@ -670,8 +670,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-icon:hover,
-.modal-close-icon:focus {
+.modal-close:hover .modal-close-icon,
+.modal-close:focus .modal-close-icon {
   fill: #ffffff;
 }
 
@@ -716,15 +716,6 @@ img {
   margin-bottom: 4px;
   color: #8e8f99;
 }
-
-/* .modal-form-input-descr {
-  display: block;
-  margin-bottom: 4px;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--light-slate);
-} */
 
 .modal-form-wrapper {
   position: relative;
